--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,12 +3,17 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://drive.google.com/file/d/1OEpd0JqL1RE6IryAtUSLmY_M2MBXg_1g/view?usp=drive_link
+  source_URL: https://drive.google.com/file/d/1yLiUUVor0xmtWE830IpivUwYUKS43jfV/view?usp=drive_link
   local_data_file: artifacts/data_ingestion/data.zip
-  unzip_dir: artifacts/data_ingestion
+  unzip_dir: artifacts/data_ingestion/
   
 
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
